// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderSvg should render a complete SVG card with user stats 1`] = `
"<svg width="400" height="180" viewBox="0 0 400 180"><defs><style>
  .bg { fill: url(#bg-gradient); }
  .username { font-size: 16px; font-weight: 600; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #f8f8f2; }
  .level-label { font-size: 14px; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #bd93f9; }
  .level-value { font-size: 48px; font-weight: 700; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #f8f8f2; }
  .rank-label { font-size: 18px; font-weight: 600; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #50fa7b; }
  .exp-label { font-size: 12px; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #ffb86c; }
</style><linearGradient id="bg-gradient">
    <stop offset="0%" stop-color="#44475a"></stop>
    <stop offset="100%" stop-color="#282a36"></stop>
  </linearGradient></defs><rect width="100%" height="100%" rx="10" class="bg"></rect><g><text x="20" y="30" class="username">testuser</text><text x="200" y="70" text-anchor="middle" class="level-label">Level</text><text x="200" y="115" text-anchor="middle" class="level-value">4</text><text x="200" y="145" text-anchor="middle" class="rank-label">駆け出しデベロッパー</text><text x="380" y="160" text-anchor="end" class="exp-label">Next Level in 1,125 B</text></g></svg>"
`;

exports[`renderSvg should render correctly for a new user with zero stats 1`] = `
"<svg width="400" height="180" viewBox="0 0 400 180"><defs><style>
  .bg { fill: url(#bg-gradient); }
  .username { font-size: 16px; font-weight: 600; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #f8f8f2; }
  .level-label { font-size: 14px; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #bd93f9; }
  .level-value { font-size: 48px; font-weight: 700; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #f8f8f2; }
  .rank-label { font-size: 18px; font-weight: 600; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #50fa7b; }
  .exp-label { font-size: 12px; font-family: 'Segoe UI', Ubuntu, "Helvetica Neue", sans-serif; fill: #ffb86c; }
</style><linearGradient id="bg-gradient">
    <stop offset="0%" stop-color="#44475a"></stop>
    <stop offset="100%" stop-color="#282a36"></stop>
  </linearGradient></defs><rect width="100%" height="100%" rx="10" class="bg"></rect><g><text x="20" y="30" class="username">newbie</text><text x="200" y="70" text-anchor="middle" class="level-label">Level</text><text x="200" y="115" text-anchor="middle" class="level-value">1</text><text x="200" y="145" text-anchor="middle" class="rank-label">Hello Worldの住人</text><text x="380" y="160" text-anchor="end" class="exp-label">Next Level in 5,000 B</text></g></svg>"
`;
